--- a/protobuf-test/pom.xml
+++ b/protobuf-test/pom.xml
@@ -34,7 +34,7 @@
 							<tasks>
 								<exec executable="protoc">
 									<arg value="--java_out=src/main/java" />
-									<arg value="src/main/protobuf/test.proto" />
+									<arg value="src/main/protobuf/*" />
 								</exec>
 							</tasks>
 						</configuration>
